# OpenSimRT

./: .gitignore  CMakeLists.txt  README.md  package.xml
OpenSimRT/: CMakeLists.txt  Settings.h.in
OpenSimRT/Common/include/: Visualization.h
OpenSimRT/Common/src/: SignalProcessing.cpp  Visualization.cpp
OpenSimRT/Examp/: CMakeLists.txt
OpenSimRT/Examp/src/: example.cpp
OpenSimRT/Pipeline/: CMakeLists.txt  README.md
OpenSimRT/Pipeline/applications/: agrf.cpp  cgrf.cpp  id_pipeline.cpp
OpenSimRT/Pipeline/include/: agrf_pipe.h  cgrf_pipe.h  common_node.h  dualsink_pipe.h  grf_pipe.h  id.h  id_so_jr.h
OpenSimRT/Pipeline/src/: agrf_pipe.cpp  cgrf_pipe.cpp  common_node.cpp  dualsink_pipe.cpp  grf_pipe.cpp  id.cpp  id_so_jr.cpp
OpenSimRT/RealTime/: CMakeLists.txt
OpenSimRT/RealTime/include/: InverseDynamics.h
OpenSimRT/RealTime/include/experimental/: GRFMNonSmooth.h  GRFMPrediction.h  GRFMPredictionInsole.h  GaitPhaseDetector.h  (+1 more)
OpenSimRT/Ros/: CMakeLists.txt
OpenSimRT/Ros/include/: common_node.h  resolv_dir.h  saver_node.h
OpenSimRT/Ros/src/: common_node.cpp  saver_node.cpp
OpenSimRT/UIMU/: CMakeLists.txt
OpenSimRT/UIMU/applications/: ContactForceBasedPhaseDetector.cpp  OnlineLowerLimbUIMUIK.cpp  OnlineUpperLimbUIMUIKar.cpp  cons.cpp  nnn.cpp  prod.cpp
OpenSimRT/UIMU/include/: TfServer.h  UIMUInputDriver.h
OpenSimRT/UIMU/src/: SimpleServer.cpp  TfServer.cpp  UIMUInputDriver.cpp
doc/: CMakeLists.txt
launch/: agrfm.launch  agrfm_as_grf.launch  cgrfm.launch  cgrfm_as_grf.launch  id.launch  id_combined_agrf.launch  id_combined_cgrf.launch
(+6 files in other folders)
